--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,5 +1,16 @@
 .post {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 10px;
    &__image {
+      margin-right: 10px;
       cursor: pointer;
+   }
+}
+
+@media screen and (max-width: 700px) {
+   .post.card {
+      flex-direction: column;
    }
 }
