--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -3,6 +3,7 @@
    align-items: center;
    justify-content: center;
    padding: 10px;
+   box-sizing: border-box;
    &__image {
       margin-right: 10px;
       cursor: pointer;
